<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/mainBackground"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:id="@+id/input"
        android:textSize="20dp"
        android:background="@drawable/edittext"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:id="@+id/result"
        android:background="@drawable/edittext"
        android:textColor="@android:color/black"
        android:hint="@string/result"
        android:textSize="45dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_1"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_2"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_3"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_plus"
                android:id="@+id/button_plus"
                android:textSize="20dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_4"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_5"
                android:id="@+id/button5"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_6"
                android:id="@+id/button6"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_minus"
                android:id="@+id/button_minus"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:textSize="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_7"
                android:id="@+id/button7"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_8"
                android:id="@+id/button8"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_9"
                android:id="@+id/button9"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/mult"
                android:id="@+id/button_mult"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:textSize="20dp"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_clear_one"
                android:id="@+id/button_clear_one"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_0"
                android:id="@+id/button0"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_point"
                android:id="@+id/button_point"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="/"
                android:id="@+id/button_div"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:textSize="20dp"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="C"
                android:id="@+id/button_clear"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:layout_marginRight="3dp"
                android:textSize="20dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="="
                android:id="@+id/button_equal"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:textSize="20dp"
                />
        </TableRow>

    </TableLayout>


</LinearLayout>
