<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/mainBackground"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    </android.support.design.widget.AppBarLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/imageView"
        android:scaleType="fitCenter"
        android:src="@drawable/reducing_fractions"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_rereducing"
        android:textSize="25sp"
        android:id="@+id/textView"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="85dp"
            android:layout_height="105dp"
            android:textSize="80sp"
            android:gravity="center_horizontal"
            android:id="@+id/int1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:inputType="number"
            android:background="@drawable/edittext"
            android:textColor="@android:color/black"
            android:layout_marginLeft="20dp"
            />

        <EditText
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:textSize="25sp"
            android:gravity="center"
            android:id="@+id/num1"
            android:layout_alignParentTop="true"
            android:inputType="number"
            android:background="@drawable/edittext"
            android:textColor="@android:color/black"
            android:layout_toRightOf="@+id/int1"
            android:layout_toEndOf="@+id/int1"
            android:layout_marginLeft="3dp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="15dp"
            android:textSize="10sp"
            android:text="@string/cccc"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:id="@+id/textView4"
            android:gravity="center"
            android:layout_below="@+id/num1"
            android:layout_alignRight="@+id/num1"
            android:layout_alignEnd="@+id/num1"
            android:layout_toRightOf="@+id/int1"
            android:layout_toEndOf="@+id/int1"
            android:layout_marginLeft="3dp"/>
        <EditText
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:textSize="25sp"
            android:gravity="center"
            android:id="@+id/den1"
            android:layout_toRightOf="@+id/int1"
            android:layout_alignBottom="@+id/int1"
            android:inputType="number"
            android:background="@drawable/edittext"
            android:textColor="@android:color/black"
            android:layout_marginLeft="3dp"/>

        <TextView
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="55sp"
            android:id="@+id/sign"
            android:text="="
            android:layout_alignBottom="@+id/den1"
            android:layout_toRightOf="@+id/num1"
            android:layout_toEndOf="@+id/num1"
            android:layout_marginBottom="20dp" />
        <TextView
            android:layout_width="85dp"
            android:layout_height="105dp"
            android:textSize="80sp"
            android:gravity="center_horizontal"
            android:id="@+id/int2"
            android:background="@drawable/edittext"
            android:textColor="@android:color/black"
            android:layout_toRightOf="@+id/sign"
            />
        <TextView
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:textSize="25sp"
            android:gravity="center"
            android:id="@+id/num2"
            android:layout_alignParentTop="true"
            android:background="@drawable/edittext"
            android:textColor="@android:color/black"
            android:layout_toRightOf="@+id/int2"
            android:layout_toEndOf="@+id/int2"
            android:layout_marginLeft="3dp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="15dp"
            android:textSize="10sp"
            android:text="@string/cccc"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:id="@+id/textView2"
            android:gravity="center"
            android:layout_below="@+id/num2"
            android:layout_alignRight="@+id/num2"
            android:layout_alignEnd="@+id/num2"
            android:layout_toRightOf="@+id/int2"
            android:layout_toEndOf="@+id/int2"
            android:layout_marginLeft="3dp"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:textSize="25sp"
            android:gravity="center"
            android:id="@+id/den2"
            android:layout_toRightOf="@+id/int2"
            android:layout_alignBottom="@+id/int2"
            android:background="@drawable/edittext"
            android:textColor="@android:color/black"
            android:layout_marginLeft="3dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reduce"
            android:id="@+id/find2"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:background="@drawable/button"
            android:shadowColor="@android:color/black"
            android:shadowRadius="5"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/clear"
            android:id="@+id/clear2"
            android:textSize="20sp"
            android:background="@drawable/button"
            android:shadowColor="@android:color/black"
            android:shadowRadius="5"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>
